# mini-data-platform

./: .env.example  .gitignore  SOLUTION.md  package-lock.json  pyproject.toml
agent/: __init__.py  agent.py  cli.py  constants.py  db.py  llm.py  prompts.py
airflow/: airflow.cfg
evidence/: package-lock.json
sources/analytics/: pageviews.csv
sources/postgres/: products.csv  transactions.csv  users.csv
sources/salesforce/: campaigns.csv
tests/: __init__.py  test_agent.py
